# KZDownloader

./: .gitignore  README.md  pubspec.yaml
android/app/: build.gradle.kts
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/core/providers/: locale_provider.dart  locale_provider.g.dart  quality_provider.dart  quality_provider.g.dart  theme_provider.dart  theme_provider.g.dart
lib/core/services/: audio_player_service.dart  audio_player_service.g.dart  db_service.dart  download_service.dart  llm_service.dart  memory_service.dart  memory_service.g.dart  (+3 more)
lib/models/: download_task.dart  download_task.g.dart  playlist.dart  playlist.g.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  MainFlutterWindow.swift  Release.entitlements
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: download.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/ios/: rust_lib_kzdownloader.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_kzdownloader.podspec
rust_builder/windows/: CMakeLists.txt
test/: widget_test.dart
translations/: README-it.md
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+75 files in other folders)
