[package]
name = "rust_lib_kzdownloader"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
futures = "0.3"

# NUOVA CONFIGURAZIONE WREQ
# Nota: wreq usa versioni alte (es. v5/v6) perché segue il versionamento di altri tool interni
wreq = {version="6.0.0-rc.21", features = ["stream"]}
wreq-util = "3.0.0-rc.7"
